# konfig

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  render-only-docs.yaml  render.yaml
enterprise/: .gitignore  .langchain.db  manage.py  pyproject.toml
enterprise/chat/: consumers.py  routing.py
enterprise/chat/templates/chat/: index.html  room.html
enterprise/chatbot_app/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
enterprise/chatbot_app/migrations/: 0001_initial.py  0002_chat.py  0003_chat_name.py  0004_remove_chat_messages_message_chat.py  0005_alter_chat_name.py  0006_chat_created_at_alter_chat_name.py  0007_organization_space_user_membership.py  0008_auto_20240421_2352.py  0009_chat_space.py  0010_alter_membership_user_delete_user.py  0011_space_users_in_this_space.py  0012_remove_space_users_in_this_space_userspace.py  0013_alter_userspace_space_alter_userspace_user.py  0014_rename_userspace_currentuserspace.py  0015_organization_name.py  0016_curentuserorganization.py  0017_curentuserchat.py  0018_rename_curentuserchat_currentuserchat.py  0019_delete_currentuserchat.py  0020_chat_chat_id.py  0021_populate_uuid.py  0022_remove_uuid_null.py  0023_rename_curentuserorganization_currentuserorganization.py  0024_space_name.py  0025_configuration_form.py  0026_chat_form_data_delete_form.py  0027_chat_configuration_data.py
enterprise/chatbot_app/templates/: _chat_container_inner.html  _chat_container_inner2.html  _customer_form.html  _customer_search_results.html  _language_form.html  _language_form_row.html  _review_generated_template.html  _review_generated_template_inner.html  _review_onboarding_guide.html  _review_onboarding_guide_inner.html  _select_relevant_docs.html  _select_relevant_docs_search_results.html  _select_relevant_docs_search_results_document.html  _select_relevant_operations.html  _select_relevant_operations_search_results.html  _select_relevant_operations_search_results_row.html  _topic_form.html  app.html  base.html  burger_icon.html  chat.html  chat_container.html  chat_select.html  chatbox.html  chevron_right.html  custom_form.html  customer_configuration.html  customer_configurations.html  guides.html  organization_select.html  space_select.html
enterprise/chatbot_app/util/: generate_guide.py  generate_template_for_guide.py  get_customers.py  get_documents.py  get_operations.py
enterprise/enterprise/: asgi.py  settings.py  urls.py  views.py  wsgi.py
enterprise/static/: styles.css
enterprise/templates/: app.html  base.html  home.html  login.html  signup.html
generator/konfig-docs/blog/2023/12/grpc-assets/slides/: generate-carousel.py  pyproject.toml
generator/konfig-docs/scripts/generate-konfig-vs-universal-api-pricing-comparison.py/: generate.py  pyproject.toml
generator/konfig-python-formatter-server-blackd/: Earthfile  README.md  build-dev.sh  build.sh  main.py  pyproject.toml  start-blackd.sh  start-ci.sh  start-server.sh  start.sh
generator/konfig-python-remote-code-executor/: build-render.sh  dev.sh  main.py  openapi.json  pyproject.toml  start.sh  test.sh
generator/konfig-python-remote-code-executor/test/scripts/: README.md  konfig.yaml  openapi.json
generator/konfig-python-remote-code-executor/test/scripts/.konfig/: progress.yaml
generator/konfig-python-remote-code-executor/test/scripts/sdk/: .konfigignore  README.md  pyproject.toml  setup.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/.konfig/: generate-id.txt
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/: __init__.py  api_client.py  client.py  client_custom.py  configuration.py  exceptions.py  request_after_hook.py  request_before_hook.py  rest.py  schemas.py  validation_metadata.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/apis/: path_to_api.py  tag_to_api.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/model/: __init__.py  execution_result.py  http_validation_error.pyi  session_close_request.pyi  session_close_response.pyi  session_create_response.py  session_execute_request.pyi  session_info.py  session_list_response.pyi  session_not_found_error.py  validation_error.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/models/: __init__.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/paths/: __init__.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/api_client/type/: execution_result.py  http_validation_error.py  session_list_response.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/docs/models/: ExecutionResult.md  HTTPValidationError.md  SessionCloseRequest.md  SessionCloseResponse.md  SessionCreateResponse.md  SessionExecuteRequest.md  SessionInfo.md  SessionListResponse.md  SessionNotFoundError.md  ValidationError.md
generator/konfig-python-remote-code-executor/test/scripts/sdk/python_rce/: __init__.py  api_client.py  client.py  client_custom.py  configuration.py  exceptions.py  request_after_hook.py  request_before_hook.py  rest.py  schemas.py  type_util.py  validation_metadata.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/python_rce/apis/: path_to_api.py  tag_to_api.py
generator/konfig-python-remote-code-executor/test/scripts/sdk/python_rce/model/: __init__.py  execution_result.pyi  (+9 more)
generator/konfig-python-remote-code-executor/test/scripts/sdk/test/: test_flows.py
misc/building-ai-applications/: Generating Guides from OpenAPI Specification.ipynb  RAG.ipynb  generating-guides-from-openapi.ipynb  pyproject.toml
misc/building-ai-applications/.ipynb_checkpoints/: Chatbots-checkpoint.ipynb  test.md
misc/building-ai-applications/demo/documents/: spec.yaml
misc/building_ai_applications/: creating-a-journey.md  pyproject.toml
misc/building_ai_applications/demo/: .gitignore  .langchain.db  demo.py  prompts.py  pyproject.toml
update-status-of-apis-in-openapi-examples/: .gitignore  check-status-of-apis.ts  generate-readme.ts  generate_charts_and_stats.py  package.json  pyproject.toml
(+14517 files in other folders)
