[tool.poetry]
name = "enterprise"
version = "0.0.1"
description = ""
authors = ["dphuang2 <dylan@konfigthis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Django = "^5.0.4"
requests = "^2.31.0"
djlint = "^1.34.1"
langchain = "^0.1.16"
langchain-community = "^0.0.32"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.2"
chromadb = "^0.4.24"
bs4 = "^0.0.2"
jupyterlab = "^4.1.6"
langchain-text-splitters = "^0.0.1"
langchain-chroma = "^0.1.0"
jsonref = "^1.1.0"
langchain-pinecone = "^0.1.0"
lark = "^1.1.9"
pinecone-client = "^3.2.2"
arize-phoenix = "^3.22.0"
langgraph = "^0.0.39"
channels = {extras = ["daphne"], version = "^4.1.0"}
uvicorn = "^0.29.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
