[tool.poetry]
name = "python-formatter-server-blackd"
version = "0.1.0"
description = ""
authors = ["dphuang2 <dylan.p.huang@gmail.com>"]
readme = "README.md"
packages = [{include = "python_formatter_server_blackd"}]

[tool.poetry.dependencies]
python = "^3.7"
black = {extras = ["d"], version = "^23.3.0"}
fastapi = "^0.95.1"
httpx = "^0.24.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
