[tool.poetry]
name = "konfig-python-remote-code-executor"
version = "0.1.0"
description = "Remote code execution API for Python"
authors = ["dylanhuang <dylan@konfigthis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
ipython = "^8.13.2"
snaptrade-python-sdk = "^10.19.0"
nest-asyncio = "^1.5.6"
fastapi-utils = "^0.2.1"
humanloop = "0.4.0a9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
