[tool.poetry]
name = "konfig-python-remote-code-executor"
version = "0.1.0"
description = "Remote code execution API for Python"
authors = ["dylanhuang <dylan@konfigthis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.22.0"
ipython = "^8.13.2"
snaptrade-python-sdk = "^10.19.0"
nest-asyncio = "^1.5.6"
humanloop = "^0.7.17"
drdroid-sdk = "^2.0.0"
pygithub = "^1.58.2"
sketch = "^0.4.2"
unicourt = "^1.0"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
