[tool.poetry]
name = "building-ai-applications"
version = "0.0.1"
description = ""
authors = ["dphuang2 <dylan@konfigthis.com>"]
readme = "README.md"
packages = [{include = "langchain_rag_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
langchain = "^0.1.15"
langchain-community = "^0.0.32"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.2"
chromadb = "^0.4.24"
bs4 = "^0.0.2"
jupyterlab = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
