[tool.poetry]
name = "generate-konfig-vs-universal-api-pricing-comparison-py"
version = "0.1.0"
description = ""
authors = ["dphuang2 <dylan@konfigthis.com>"]
readme = "README.md"
packages = [{include = "generate_konfig_vs_universal_api_pricing_comparison"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
